--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/cashier": "~7.0",
         "laravel/cashier-braintree": "^2.0",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "vinkla/pusher": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
