--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "doctrine/dbal": "^2.5",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/cashier": "~7.0",
         "laravel/cashier-braintree": "^2.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "league/fractal": "^0.15.0",
         "vinkla/pusher": "^2.5"
     },
     "require-dev": {
